--- a/miniprogram/pages/player/player.wxml
+++ b/miniprogram/pages/player/player.wxml
@@ -1,2 +1,17 @@
-<!--pages/player/player.wxml-->
-<text>pages/player/player.wxml</text>
+<view wx:if="{{picUrl}}" class="player-container" style="background:url({{picUrl}}) center/cover no-repeat">
+
+</view>
+<view class="player-mask"></view>
+
+<view class="player-info">
+  <view class="player-disc">
+    <image class="player-img" src="{{picUrl}}"></image>
+  </view>
+
+  <view class="control">
+    
+    <text class="iconfont icon-hanhan-01"></text>
+    <text class="iconfont icon-bofang1"></text>
+    <text class="iconfont icon-hanhan-011"></text>
+  </view>
+</view>
