--- a/miniprogram/pages/player/player.wxml
+++ b/miniprogram/pages/player/player.wxml
@@ -4,14 +4,14 @@
 <view class="player-mask"></view>
 
 <view class="player-info">
-  <view class="player-disc">
-    <image class="player-img" src="{{picUrl}}"></image>
+  <view class="player-disc {{isPlaying?'playing':''}}">
+    <image class="player-img zhuan {{isPlaying?'':'ting'}}" src="{{picUrl}}"></image>
   </view>
 
   <view class="control">
     
     <text class="iconfont icon-hanhan-01"></text>
-    <text class="iconfont icon-bofang1"></text>
+    <text class="iconfont {{isPlaying?'icon-bofang':'icon-bofang2'}}" bind:tap='togglePlaying'></text>
     <text class="iconfont icon-hanhan-011"></text>
   </view>
 </view>
