--- a/miniprogram/pages/player/player.wxss
+++ b/miniprogram/pages/player/player.wxss
@@ -48,7 +48,12 @@
   background: url(https://dnj-javastudy.oss-cn-beijing.aliyuncs.com/student/needle.png) no-repeat center/contain;
   transform: rotate(-15deg);
   transform-origin: 24rpx 10rpx;
+  transition:transform 0.8s ease;
 }
+.playing.player-disc::after{
+  transform : rotate(0deg);
+}
+
 
 .player-img{
   width: 368rpx;
@@ -61,6 +66,21 @@
   margin-left: -184rpx;
 }
 
+
+
+.zhuan{
+  animation: disc 12s linear infinite;
+}
+@keyframes disc{
+  from{
+    transform:rotate(0deg);
+  }to{
+    transform:rotate(360deg);
+  }
+}
+.ting{
+  animation-play-state: paused;
+}
 .control{
   position: absolute;
   bottom:8%;
@@ -77,7 +97,7 @@
 .icon-hanhan-01,.icon-hanhan-011{
   font-size: 80rpx;
 }
-.icon-bofang,.icon-bofang1{
+.icon-bofang,.icon-bofang2{
   font-size: 80rpx;
   margin:0 50rpx;
 }
